<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoomMates</string>
    <string name="hello_world">Hello world!</string>
    <string name="fragment1">Ventana 1</string>
    <string name="fragment2">Ventana 2</string>
    <string name="drawer_open">Menu abierto</string>
    <string name="drawer_close">Menu cerrado</string>
    <string name="action_about">About RoomMates</string>
    <string name="action_settings">Settings</string>
    <string name="action_tasks">New Task</string>
    <string name="action_shopping">New Product</string>
    <string name="action_bills">New Bill</string>
    <string name="action_apartment">New Apartment</string>
    <string name="action_roommate">Add roommate</string>
    <string name="action_sync">Synchronize</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="title_activity_preferencias">Settings</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="title_activity_new_apartment">New House</string>
    <string name="title_activity_new_bill">New Bill</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_add_roommate">Add roommate</string>
    <string name="button_login_text">Log In</string>
    <string name="button_register_text">Sign Up</string>
    <string name="drawer_name_home">Home</string>
    <string name="drawer_name_bills">Bills</string>
    <string name="drawer_name_shopping">Shopping</string>
    <string name="drawer_name_tasks">Tasks</string>
    <string name="drawer_name_roommates">Roommates</string>
    <string name="drawer_name_rooms">Rooms</string>
    <string name="alert_removebill_tittle">Remove bill</string>
    <string name="alert_removebill_message">Do you want to remove this bill?</string>
    <string name="alert_removetask_tittle">Remove task</string>
    <string name="alert_removetask_message">Do you want to remove this task?</string>
    <string name="alert_markpurchased_tittle">Mark as purchased</string>
    <string name="alert_markpurchased_message">Did you buy this product?</string>
    <string name="alert_markurgentproduct_tittle">Mark as urgent</string>
    <string name="alert_markurgentproduct_message">Do you want to mark this product as urgent?</string>
    <string name="alert_deleteproduct_tittle">Delete</string>
    <string name="alert_cancelpaymentbill_tittle">Cancel payment</string>
    <string name="alert_cancelpaymentbill_message">Do you want to cancel this payment?</string>
    <string name="alert_paybill_tittle">Pay bill</string>
    <string name="alert_paybill_message">Did you pay this bill?</string>
    <string name="alert_deleteproduct_message">Do you want to delete this product?</string>
    <string name="alert_selectapartment_tittle">Select apartment</string>
    <string name="alert_selectapartment_message">Do you want to select this apartment?</string>
    <string name="expandablelist_markpurchased_text">Mark as purchased</string>
    <string name="expandablelist_markurgent_text">Mark as urgent</string>
    <string name="expandablelist_deleteproduct_text">Delete the product</string>
    <string name="expandablelist_markpaid_text">Mark as paid</string>
    <string name="expandablelist_deletebill_text">Delete the bill</string>
    <string name="expandablelist_markdone_text">Mark as done</string>
    <string name="expandablelist_deletetask_text">Delete the task</string>
    <string name="card_homename_text">NAME</string>
    <string name="card_homeroom_text">ROOM</string>
    <string name="card_homebills_text">BILLS</string>
    <string name="card_homeshopping_text">SHOPPING</string>
    <string name="card_hometasks_text">TASKS</string>
    <string name="register_firstname_hint">Firstname</string>
    <string name="register_lastname_hint">Lastname</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_color_text">Color</string>
    <string name="register_button_text">Register</string>
    <string name="newproduct_productname_hint">Product Name</string>
    <string name="newproduct_button_text">Add product</string>
    <string name="newbill_billname_hint">Bill name</string>
    <string name="newbill_description_hint">Bill description</string>
    <string name="newbill_totalmoney_hint">Total money</string>
    <string name="newbill_button_text">Add Bill</string>
    <string name="newapartment_name_hint">Apartment Name</string>
    <string name="newapartment_address_hint">Address</string>
    <string name="newapartment_password_hint">Password</string>
    <string name="newapartment_repeatpass_hint">Repeat Password</string>
    <string name="newapartment_button_text">Add apartment</string>
    <string name="settings_username_hint">Username</string>
    <string name="settings_password_hint">Password</string>
    <string name="settings_usernamesummary_text">Username to access your account</string>
    <string name="settings_passwordsummary_text">Password to access your account</string>
    <string name="newtask_name_hint">Task name</string>
    <string name="newtask_fromdate_hint">From (date)</string>
    <string name="newtask_interval_hint">Interval</string>
    <string name="newtask_button_text">Add Task</string>
    <string name="addroommate_useremail_hint">User email (not yours)</string>
    <string name="addroommate_button_text">Add roommate</string>
    <string name="expandablelist_cancelpayment_text">Cancel bill\'s payment</string>
    <string-array name="tipo_intervalo_tarea">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>

</resources>
